Delete config.json and add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Personal project files
+token.pickle
+config.json
+render/dashboard.html
+render/dashboard.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
